syntax = "proto3";

package engine;

import "const.proto";
import "google/protobuf/struct.proto";
import "google/api/annotations.proto";

service MemberService {
    // Create Member
    rpc CreateMember (CreateMemberRequest) returns (MemberInQueue) {
        option (google.api.http) = {
            post: "/call_center/queues/{queue_id}/members"
            body: "*"
        };
    }
    // Create Member
    rpc CreateMemberBulk (CreateMemberBulkRequest) returns (MemberBulkResponse) {
        option (google.api.http) = {
            post: "/call_center/queues/{queue_id}/members/bulk"
            body: "*"
        };
    }

    // Search of Member
    rpc SearchMembers(SearchMembersRequest) returns (ListMember) {
        option (google.api.http) = {
            get: "/call_center/members" //fixme ?
        };
    }

    // List of Member
    rpc SearchMemberInQueue(SearchMemberInQueueRequest) returns (ListMember) {
        option (google.api.http) = {
            get: "/call_center/queues/{queue_id}/members"
        };
    }
    // ReadQueueRouting
    rpc ReadMember(ReadMemberRequest) returns (MemberInQueue) {
        option (google.api.http) = {
            get: "/call_center/queues/{queue_id}/members/{id}"
        };
    }
    // UpdateMember
    rpc UpdateMember(UpdateMemberRequest) returns (MemberInQueue) {
        option (google.api.http) = {
            put: "/call_center/queues/{queue_id}/members/{id}"
            body: "*"
        };
    }
    // DeleteMember
    rpc DeleteMember(DeleteMemberRequest) returns (MemberInQueue) {
        option (google.api.http) = {
            delete: "/call_center/queues/{queue_id}/members/{id}"
        };
    }

    // DeleteMembers
    rpc DeleteMembers(DeleteMembersRequest) returns (ListMember) {
        option (google.api.http) = {
            delete: "/call_center/queues/{queue_id}/members"
            body: "*"
        };
    }

    // SearchMemberAttempts
    rpc SearchMemberAttempts(SearchMemberAttemptsRequest) returns (ListMemberAttempt) {
        option (google.api.http) = {
            get: "/call_center/queues/{queue_id}/members/{member_id}/attempts"
        };
    }

    // SearchMemberAttempts
    rpc SearchAttempts(SearchAttemptsRequest) returns (ListAttempt) {
        option (google.api.http) = {
            get: "/call_center/queues/attempts/history"
        };
    }

    rpc AttemptResult(AttemptResultRequest) returns (AttemptResultResponse) {
        option (google.api.http) = {
            patch: "/call_center/queues/{queue_id}/members/{member_id}/attempts/{attempt_id}"
            body: "*"
        };
    }

    rpc CreateAttempt(CreateAttemptRequest) returns (CreateAttemptResponse) {
        option (google.api.http) = {
            post: "/call_center/queues/{queue_id}/members/{member_id}/attempts"
            body: "*"
        };
    }
}

message CreateAttemptRequest {
    int64 queue_id = 1;
    int64 member_id = 2;
    int64 agent_id = 3;

    int64 domain_id = 4;
}

message CreateAttemptResponse {
    int64 attempt_id = 1;
}

message AttemptResultRequest {
    int32 queue_id = 1;
    int32 member_id = 2;
    int32 attempt_id = 3;

    string status = 4;

    int64 min_offering_at = 5;
    int64 expire_at = 6;
    map<string, string> variables = 7;
    bool display = 8;
    string description = 9;
    int64 transfer_queue_id = 10;
    int64 next_member_id = 11;
}

message AttemptResultResponse {
    string status = 1;
}

message ListAttempt {
    bool next = 1;
    repeated Attempt items = 2;
}

message Attempt {
    int64 id = 1;
    Lookup member = 2;

    int64 created_at = 3;
    MemberCommunication destination = 4;
    int32 weight = 5;
    int64 originate_at = 6;
    int64 answered_at = 7;
    int64 bridged_at = 8;
    int64 hangup_at = 9;
    Lookup resource = 10;
    string leg_a_id = 11;
    string leg_b_id = 12;
    string result = 13;
    Lookup agent = 14;
    Lookup bucket = 15;
    bool active = 17;
    Lookup queue = 18;
    map<string,string> variables = 19;
}

message SearchAttemptsRequest {
    int32 page = 1;
    int32 size = 2;

    FilterBetween created_at = 3;
    int64 id = 4;
    int64 member_id = 5;
    int64 queue_id = 7;
    int64 agent_id = 10;
    string result = 11;
    int64 bucket_id = 12;

    int64 domain_id = 13;
}

message SearchMembersRequest {
    int32 page = 1;
    int32 size = 2;

    int64 id = 3;
    int64 queue_id = 4;
    int32 bucket_id = 5;
    string destination = 6;

    int64 domain_id = 7;
}

message SearchMembersAttemptsRequest {
    int64 queue_id = 1;
    int32 page = 2;
    int32 size = 3;
    int64 time_from = 4;
    int64 time_to = 5;

    int64 member_id = 6;

    int32 state = 7;
    string result = 8;
    int32 agent_id = 9;
    int32 resource_id = 10;

    int64 domain_id = 11;
}

message DeleteMembersRequest {
    int64 queue_id = 1;
    repeated int64 ids = 2;

    int64 domain_id = 3;
}

message ListMemberAttempt {
    bool next = 1;
    repeated MemberAttempt items = 2;
}

message SearchMemberAttemptsRequest {
    int64 member_id = 1;
    int64 queue_id = 2;
    int64 domain_id = 3;
}

message MemberAttempt {
    int64 id = 1;
    Lookup member = 2;

    int64 created_at = 3;
    string destination = 4;
    int32 weight = 5;
    int64 originate_at = 6;
    int64 answered_at = 7;
    int64 bridged_at = 8;
    int64 hangup_at = 9;
    Lookup resource = 10;
    string leg_a_id = 11;
    string leg_b_id = 12;
    string node = 13;
    string result = 14;
    Lookup agent = 15;
    Lookup bucket = 16;
    google.protobuf.Value logs = 17;
    bool active = 19;
}

message DeleteMemberRequest {
    int64 id = 1;
    int64 queue_id = 2;
    int64 domain_id = 3;
}

message UpdateMemberRequest {
    int64 id = 1;
    int64 queue_id = 2;
    int32 priority = 3;
    int64 expire_at = 4;
    map<string, string> variables = 5;
    string name = 6;
    Lookup timezone = 7;
    repeated MemberCommunicationCreateRequest communications = 8;
    Lookup bucket = 9;
    repeated int64 skills = 10;
    int64 min_offering_at = 11;

    int64 domain_id = 12;
}

message ReadMemberRequest {
    int64 id = 1;
    int64 queue_id = 2;
    int64 domain_id = 3;
}

message CreateMemberBulkRequest {
    int64 queue_id = 1;
    repeated CreateMemberBulkItem items = 2;
    int64 domain_id = 3;
}

message CreateMemberBulkItem {
    int32 priority = 1;
    int64 expire_at = 2;
    map<string, string> variables = 3;
    string name = 4;
    Lookup timezone = 5;
    repeated MemberCommunicationCreateRequest communications = 6;
    Lookup bucket = 7;
    repeated int64 skills = 8;
    int64 min_offering_at = 9;
}

message MemberBulkResponse {
    repeated int64 ids = 1;
}

message SearchMemberInQueueRequest {
    int64 queue_id = 1;
    int32 page = 2;
    int32 size = 3;
    int64 domain_id = 4;
}

message ListMember {
    bool next = 1;
    repeated MemberInQueue items = 2;
}

message CreateMemberRequest {
    int64 queue_id = 1;
    int32 priority = 2;
    int64 expire_at = 3;
    map<string, string> variables = 4;
    string name = 5;
    Lookup timezone = 6;
    repeated MemberCommunicationCreateRequest communications = 7;
    Lookup bucket = 8;
    repeated int64 skills = 9;
    int64 min_offering_at = 10;

    int64 domain_id = 11;
}

message MemberInQueue {
    int64 id = 1;
    Lookup queue = 2;
    int32 priority = 3;
    int64 expire_at = 4;
    int64 created_at = 5;
    map<string, string> variables = 6;
    string name = 7;
    Lookup timezone = 8;
    repeated MemberCommunication communications = 9;
    Lookup bucket = 10;
    repeated int64 skills = 11;
    int64 min_offering_at = 12;

    string stop_cause = 13;
    int64 last_activity_at = 14;
    int32 attempts = 15;
    bool reserved = 16;
}

message Member1 {
    int64 id = 1;
    int64 queue_id = 2;
    int32 priority = 3;
    int64 expire_at = 4;
    int64 created_at = 5;
    map<string, string> variables = 6;
    string name = 7;
    Lookup timezone = 8;
    repeated MemberCommunication communications = 9;
    Lookup bucket = 10;
    repeated int64 skills = 11;
    int64 min_offering_at = 12;

    string stop_cause = 13;
    int64 last_activity_at = 14;
    int32 attempts = 15;
}

message MemberCommunication {
    int64 id = 1;
    string destination = 2;
    Lookup type = 3;
    int32 priority = 4;
    string description = 5;

    Lookup resource = 6;
    string display = 7;

    int32 state = 8;
    int64 last_activity_at = 9;
    int32 attempts = 10;
    string last_cause = 11;
}
message MemberCommunicationCreateRequest {
    string destination = 1;
    Lookup type = 2;
    int32 priority = 3;
    string description = 4;

    Lookup resource = 5;
    string display = 6;
}